reworded home page

--- a/templates/main.html
+++ b/templates/main.html
@@ -44,20 +44,20 @@
     <h2 class = "break">your <span>break</span>:</h2>
     <section class= "design_break">
       <div class ="break_content">
-        <h3> What task are you working on?</h3>
+        <h3> What task would you like to take a break from?</h3>
 
         <form id="mainform" method="post" action ="">
         <div class="field">
-        <h4>Enter your task: <input type="text" name="task"></h4><br>
+        <h4>Enter your current task: <input type="text" name="task"></h4><br>
 
         <h3>How long is your break?</h3>
-        <h4>Enter your break length (minutes):
+        <h4>Enter break length (minutes):
         <input type="number" min="1" max="60" name="break_length"></h4><br>
 
-        <h3>How many reminders do you want?</h3>
-        <h4>Enter an amount of reminders (number): <input type="number" min="0" name="reminder_amount"></h4><br>
+        <h3>How many times will you allow yourself to snooze?</h3>
+        <h4>(We get it, sometimes you just need "5 more minutes"): <input type="number" min="0" name="reminder_amount"></h4><br>
 
-        <h3>How frequently do you want to be reminded?</h3>
+        <h3>How long do you want each snooze to last?</h3>
         <h4>(I want to recieve an alert every 'n' minutes): <input type="number" min="0" name="reminder_frequency"></h4><br>
 
 
