--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="/stylesheets/friends.css">
+    <title>your friends</title>
+  </head>
+
   <body>
+    <h1> break<span>pro</span> </h1>
+    <div class="line-separator"></div>
+
+    <br><br><br>
     <p>Your Friends</p>
 
 
-<form method="post" action ="">
-<p><input class = "submit_button" type="submit" value="Add Friends"></p><br>
+    <form method="post" action ="">
+    <p><input class = "submit_button" type="submit" value="Add Friends"></p><br>
     </form>
   </body>
+
 </html>
