--- a/templates/timer.html
+++ b/templates/timer.html
@@ -14,15 +14,6 @@
     <br>
     <br>
     <br>
-
-      <div class = "timer_letters">
-        <h1>T </h1>
-        <h1>I </h1>
-        <h1>M </h1>
-        <h1>E </h1>
-        <h1>R </h1>
-      </div>
-
     <div class = "container">
       <div class = "section_one">
 
@@ -32,6 +23,13 @@
           </div>
         </div>
     </div>
+    <br>
+
+    <div class = "timer_letters">
+      <h1>T &nbspI&nbsp M&nbsp E&nbsp R&nbsp</h1>
+    </div>
+    <br>
+    <div class="line-separator"></div>
 
     <div class="clear"></div>
 
@@ -47,25 +45,18 @@
     <br>
     <br>
     <br>
+    <div class="container_two">
+      <div class="section_two">
+        <div class="section_two_over">
+          <a href="/"><img src="/images/home.png" width="85"></a>
+        </div>
+      </div>
+    <div>
+    <div class="clear"></div>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-
 
     <script src="/scripts/alerts.js"></script>
     <script src="/scripts/timer.js"></script>
