--- a/stylesheets/timer.css
+++ b/stylesheets/timer.css
@@ -75,11 +75,8 @@ h4{
 }
 
 .timer_letters{
-  margin-left: auto;
-  float: left;
-  position: absolute;
-  left: 240px;
-
+  text-align: center;
+  font-size: 20px;
 }
 
 .container{
@@ -116,39 +113,31 @@ h4{
   clear: both;
 }
 
-/*
-.container{
-  display: flex;
-  justify-content: center;
+.section_two{
+  background-color: rgb(25, 216, 227);
+  height: 180px;
+  width: 180px;
+  border-radius: 25px;
+  text-align: center;
+  float: right;
+  margin-right: 130px;
 }
-
-
-
-.section_over{
+.section_two_over{
   background-color: white;
-  height: 225px;
-  width: 200px;
-  margin-left: 38px;
+  height: 120px;
+  width: 120px;
+  margin-left: 30px;
+  margin-top: 33px;
   border-radius: 25px;
 }
-
 
 img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 12px;
 }
 
-
+.clear{
+  clear: both;
 }
-
-.design_break{
-  border: 5px solid orange;
-  border-radius: 25px;
-  margin-left: 350px;
-  margin-right: 350px;
-}
-
-.break_content{
-  text-align: center;
-}*/
