--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,51 +3,71 @@
 <html>
 
   <head>
-
+    <link rel="stylesheet" href="/stylesheets/settings.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/scripts/settings_jquery.js"></script>
 
     <title>User Settings</title>
 
-    <style>
-      h1{text-align: center;}
-    </style>
   </head>
 
   <body>
+    <h1> break<span>pro</span> </h1>
+    <div class="line-separator"></div>
+    <br>
+    <h2> personalize your breaks like a <span>pro</span>:</h2>
+    <div class="design_settings">
+      <form method="post" action="" >
+        <br>
+        <br>
+        <div class= "settings_content">
+          <h3>Do you want any time reminders during your break?</h3>
+          <h4>(check as many options as necessary)</h4>
 
-    <h1>your settings </h1>
+          <input type="checkbox" name="reminder" id="half_reminder" value="1/2">Remind me when my break is halfway over<br>
+          <input type="checkbox" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over<br>
+          <input type="checkbox" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
+          <input type="checkbox" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break<br>
 
-    <h2>Let's personalize your breaks like a Pro!</h2>
+          <h3>How many times will you allow yourself to snooze?</h3>
+          <input type="radio" name="snoozes" value="5">1 Times <br>
+          <input type="radio" name="snoozes" value="10">3 Times <br>
+          <input type="radio" name="snoozes" value="15">5 Times <br>
 
-    <form method="post" action="" >
+          <h3>Time each snooze lasts?</h3>
+          <input type="radio" name="snoozes" value="5">5 Minutes <br>
+          <input type="radio" name="snoozes" value="10">10 Minutes <br>
+          <input type="radio" name="snoozes" value="15">15 Minutes <br>
 
-      <h3>Do you want any time reminders during your break?</h3>
-      <h4>(check as many options as necessary)</h4>
+          <h3>What type of reminder messages do you want to receive?</h3>
+          <input type="radio" name="message_type" value="nice">Nice <br>
+          <input type="radio" name="message_type" value="mean">Mean <br>
+          <input type="radio" name="message_type" value="funny">Funny <br>
 
-      <input type="checkbox" name="reminder" id="half_reminder" value="1/2">Remind me when my break is halfway over<br>
-      <input type="checkbox" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over<br>
-      <input type="checkbox" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
-      <input type="checkbox" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break<br>
+          <p><input type="submit" value="Save Settings"></p>
+        </div>
+        <br>
+        <br>
 
-      <h3>How many times will you allow yourself to snooze?</h3>
-      <input type="radio" name="snoozes" value="5">1 Times <br>
-      <input type="radio" name="snoozes" value="10">3 Times <br>
-      <input type="radio" name="snoozes" value="15">5 Times <br>
-
-      <h3>Time each snooze lasts?</h3>
-      <input type="radio" name="snoozes" value="5">5 Minutes <br>
-      <input type="radio" name="snoozes" value="10">10 Minutes <br>
-      <input type="radio" name="snoozes" value="15">15 Minutes <br>
-
-      <h3>What type of reminder messages do you want to receive?</h3>
-      <input type="radio" name="message_type" value="nice">Nice <br>
-      <input type="radio" name="message_type" value="mean">Mean <br>
-      <input type="radio" name="message_type" value="funny">Funny <br>
-
-      <p><input type="submit" value="Save Settings"></p>
-
-    </form>
+      </form>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="line-separator"></div>
+    <br>
+    <div class="container_two">
+      <div class="section_two">
+        <div class="section_two_over">
+          <a href="/"><img src="/images/home.png" width="85"></a>
+        </div>
+      </div>
+    </div>
+    <div class="clear"></div>
+    <br>
+    <br>
+    <br>
+    <br>
 
   </body>
 
