--- a/templates/main.html
+++ b/templates/main.html
@@ -48,17 +48,17 @@
 
         <form id="mainform" method="post" action ="">
         <div class="field">
-        <h4>Enter your task: <input type="text" name="task"></h4><br>
+        <h4>Enter your task: <input type="text" name="task" required></h4><br>
 
         <h3>How long is your break?</h3>
         <h4>Enter your break length (minutes):
-        <input type="number" min="1" max="60" name="break_length"></h4><br>
+        <input type="number" min="1" max="60" name="break_length" required></h4><br>
 
         <h3>How many reminders do you want?</h3>
-        <h4>Enter an amount of reminders (number): <input type="number" min="0" name="reminder_amount"></h4><br>
+        <h4>Enter an amount of reminders (number): <input type="number" min="0" name="reminder_amount" required></h4><br>
 
         <h3>How frequently do you want to be reminded?</h3>
-        <h4>(I want to recieve an alert every 'n' minutes): <input type="number" min="0" name="reminder_frequency"></h4><br>
+        <h4>(I want to recieve an alert every 'n' minutes): <input type="number" min="0" name="reminder_frequency" required></h4><br>
 
 
         <p><input class = "submit_button" type="submit" value="Start Timer"></p><br>
