--- a/templates/settings.html
+++ b/templates/settings.html
@@ -28,24 +28,23 @@
       <input type="checkbox" name="reminder" id="half_reminder" value="1/2">Remind me when my break is halfway over<br>
       <input type="checkbox" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over<br>
       <input type="checkbox" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
-      <input type="checkbox" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break<br>
 
       <h3>How many times will you allow yourself to snooze?</h3>
-      <input type="radio" name="snoozes" value="5">1 Times <br>
+      <input type="radio" name="snoozes" value="5" required>1 Times <br>
       <input type="radio" name="snoozes" value="10">3 Times <br>
       <input type="radio" name="snoozes" value="15">5 Times <br>
 
       <h3>Time each snooze lasts?</h3>
-      <input type="radio" name="snoozes" value="5">5 Minutes <br>
-      <input type="radio" name="snoozes" value="10">10 Minutes <br>
-      <input type="radio" name="snoozes" value="15">15 Minutes <br>
+      <input type="radio" name="snooze_length" value="5" required>5 Minutes <br>
+      <input type="radio" name="snooze_length" value="10" >10 Minutes <br>
+      <input type="radio" name="snooze_length" value="15" >15 Minutes <br>
 
       <h3>What type of reminder messages do you want to receive?</h3>
-      <input type="radio" name="message_type" value="nice">Nice <br>
+      <input type="radio" name="message_type" value="nice" required>Nice <br>
       <input type="radio" name="message_type" value="mean">Mean <br>
       <input type="radio" name="message_type" value="funny">Funny <br>
 
-      <p><input type="submit" value="Save Settings"></p>
+      <p><input type="submit" id="save" value="Save Settings"></p>
 
     </form>
 
