--- a/templates/settings.html
+++ b/templates/settings.html
@@ -24,20 +24,19 @@
           <h3>Do you want any time reminders during your break?</h3>
           <h4>(check as many options as necessary)</h4>
 
-          <input type="checkbox" name="reminder" id="half_reminder" value="1/2" required>Remind me when my break is halfway over<br>
-          <input type="checkbox" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over<br>
-          <input type="checkbox" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
-          <input type="checkbox" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break<br>
+          <input type="checkbox" name="reminder_half" id="half_reminder" value="Half">Remind me when my break is halfway over<br>
+          <input type="checkbox" name="reminder_third" id="third_reminder" value="Third">Remind me when I have a third of my break left<br>
+          <input type="checkbox" name="reminder_fourth" id="fourth_reminder" value="Fourth">Remind me when I have a fourth of my break left<br>
 
           <h3>How many times will you allow yourself to snooze?</h3>
-          <input type="radio" name="snoozes" value="5" required>1 Times <br>
-          <input type="radio" name="snoozes" value="10">3 Times <br>
-          <input type="radio" name="snoozes" value="15">5 Times <br>
+          <input type="radio" name="snoozes_allowed" value="1" required>1 Times <br>
+          <input type="radio" name="snoozes_allowed" value="3">3 Times <br>
+          <input type="radio" name="snoozes_allowed" value="5">5 Times <br>
 
           <h3>Time each snooze lasts?</h3>
-          <input type="radio" name="snooze_length" value="5" required>5 Minutes <br>
-          <input type="radio" name="snooze_length" value="10">10 Minutes <br>
-          <input type="radio" name="snooze_length" value="15">15 Minutes <br>
+          <input type="radio" name="snoozes_length" value="5" required>5 Minutes <br>
+          <input type="radio" name="snoozes_length" value="10">10 Minutes <br>
+          <input type="radio" name="snoozes_length" value="15">15 Minutes <br>
 
           <h3>What type of reminder messages do you want to receive?</h3>
           <input type="radio" name="message_type" value="nice" required>Nice <br>
