--- a/stylesheets/friends.css
+++ b/stylesheets/friends.css
@@ -1,3 +1,7 @@
+body{
+  background: linear-gradient(0deg, rgba(149,236,236,1), rgba(149,236,236,0));
+}
+
 h1{
   text-align: center;
   font-size: 42px;
@@ -6,10 +10,81 @@ h1 span {
  color: rgb(255, 161, 12);
 }
 
+h2{
+  text-align: center;
+}
+h2 span {
+ color: rgb(251, 120, 53);
+}
+
 .line-separator{
 height:5px;
 border-bottom:5px solid rgb(25, 216, 227);
 width: 323px;
 margin-left: auto;
 margin-right: auto;
+}
+
+.container{
+  background-color: rgba(255,255,255,0.4);
+  border: 4px solid rgb(255, 161, 12);
+  border-radius: 20px;
+  margin-left: 32%;
+  margin-right: 32%;
+  text-align: center;
+  font-size: 18px;
+}
+a:link{
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+}
+a:visited {
+    color: black;
+}
+a:hover {
+    color: orange;
+}
+
+.submit_button{
+  font-size: 18px;
+  background-color: rgb(94, 230, 237);
+  border: 2px solid rgb(25, 219, 230);
+  border-radius: 10px;
+}
+.submit_button:hover {background-color: rgb(25, 219, 230);}
+
+.submit_button:active {
+  background-color: rgb(25, 219, 230);
+  transform: translateY(4px);
+}
+
+
+.section_two{
+  background-color: rgb(25, 216, 227);
+  height: 180px;
+  width: 180px;
+  border-radius: 25px;
+  text-align: center;
+  float: right;
+  margin-right: 135px;
+}
+.section_two_over{
+  background-color: white;
+  height: 120px;
+  width: 120px;
+  margin-left: 30px;
+  margin-top: 33px;
+  border-radius: 25px;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 12px;
+}
+
+.clear{
+  clear: both;
 }
