--- a/templates/friends.html
+++ b/templates/friends.html
@@ -9,20 +9,49 @@
     <h1> break<span>pro</span> </h1>
     <div class="line-separator"></div>
 
-    <br><br><br>
-    <p>Your Friends</p>
+    <br>
+    <h2>your <span>friends</span>:</h2>
 
+    <div class = "container">
+      <br>
+      <div class="form_container">
+        <form method="post" action ="">
+          <input type="text" name="friend_email"><br><br>
+          <input class = "submit_button" type="submit" value="Add Friend"><br>
+        </form>
+      </div>
+      <br>
+      <br>
+
+      {% for friend in friends%}
+        {{friend.email}} <br>
+        <h4><a href="">See your friend's log</a></h4>
+        <br>
+      {% endfor %}
+      <br>
+    </div>
     <br>
     <br>
+    <br>
 
-    {% for friend in friends%}
-      {{friend.email}} <br>
-    {% endfor %}
+    <div class="line-separator"></div>
+    <br>
+    <div class="section_container">
+      <div class="container_two">
+        <div class="section_two">
+          <div class="section_two_over">
+            <a href="/"><img src="/images/home.png" width="85"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clear"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <form method="post" action ="">
-      <input type="text" name="friend_email"><br><br>
-      <input class = "submit_button" type="submit" value="Add Friend"><br>
-    </form>
   </body>
 
 </html>
