--- a/templates/friends.html
+++ b/templates/friends.html
@@ -40,7 +40,7 @@
       <div class="container_two">
         <div class="section_two">
           <div class="section_two_over">
-            <a href="/"><img src="/images/home.png" width="85"></a>
+            <a href="/home"><img src="/images/home.png" width="85"></a>
           </div>
         </div>
       </div>
