--- a/templates/friends.html
+++ b/templates/friends.html
@@ -6,12 +6,18 @@
   </head>
 
   <body>
+
     <h1> break<span>pro</span> </h1>
     <div class="line-separator"></div>
-
     <br>
     <h2>your <span>friends</span>:</h2>
-
+    <div class="container_two">
+      <div class="section_two">
+        <div class="section_two_over">
+          <a href="/"><img src="/images/home.png" width="85"></a>
+        </div>
+      </div>
+    </div>
     <div class = "container">
       <br>
       <div class="form_container">
@@ -25,7 +31,7 @@
 
       {% for friend in friends%}
         {{friend.email}} <br>
-        <h4><a href="">See your friend's log</a></h4>
+        <h4><a href="/user_log?user={{friend.friend_id}}">See your friend's log</a></h4>
         <br>
       {% endfor %}
       <br>
@@ -36,16 +42,18 @@
 
     <div class="line-separator"></div>
     <br>
-    <div class="section_container">
-      <div class="container_two">
-        <div class="section_two">
-          <div class="section_two_over">
-            <a href="/"><img src="/images/home.png" width="85"></a>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="clear"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
