--- a/templates/settings.html
+++ b/templates/settings.html
@@ -17,12 +17,12 @@
     <br>
     <h2> personalize your breaks like a <span>pro</span>:</h2>
     <div class="design_settings">
-      <form method="post" action="" >
+      <br>
+      <form method="post" action="/home" >
         <br>
         <br>
         <div class= "settings_content">
           <h3>Do you want any time reminders during your break?</h3>
-          <h4>(check as many options as necessary)</h4>
 
           <input type="checkbox" name="reminder_half" id="half_reminder" value="Half">Remind me when my break is halfway over<br>
           <input type="checkbox" name="reminder_third" id="third_reminder" value="Third">Remind me when I have a third of my break left<br>
@@ -41,7 +41,7 @@
           <h3>What type of reminder messages do you want to receive?</h3>
           <input type="radio" name="message_type" value="nice" required>Nice <br>
           <input type="radio" name="message_type" value="mean">Mean <br>
-          <input type="radio" name="message_type" value="funny">Funny <br>
+          <input type="radio" name="message_type" value="funny">Funny <br><br>
 
           <p><input type="submit" id="save" value="Save Settings"></p>
         </div>
