--- a/templates/friends.html
+++ b/templates/friends.html
@@ -9,6 +9,7 @@
 
     <h1> break<span>pro</span> </h1>
     <div class="line-separator"></div>
+    <h4 class ="email"> {{user_email}}</h4>
     <br>
     <h2>your <span>friends</span>:</h2>
     <div class="container_two">
