--- a/templates/settings.html
+++ b/templates/settings.html
@@ -14,6 +14,7 @@
   <body>
     <h1> break<span>pro</span> </h1>
     <div class="line-separator"></div>
+    <h4 class ="email"> {{email}}</h4>
     <br>
     <h2> personalize your breaks like a <span>pro</span>:</h2>
     <div class="design_settings">
