--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -10,6 +10,7 @@
   <body>
     <h1> break<span>pro</span> <h1>
     <div class="line-separator"></div>
+    <h4 class ="email"> {{email}}</h4>
     <h2>how you've been spending your breaks:</h2>
     <br>
     <div class = "table_container">
