--- a/templates/settings.html
+++ b/templates/settings.html
@@ -19,7 +19,7 @@
     <h2> personalize your breaks like a <span>pro</span>:</h2>
     <div class="design_settings">
       <br>
-      <form method="post" action="/home" >
+      <form method="post" action="" >
         <br>
         <br>
         <div class= "settings_content">
