Settings linked to timer

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -7,8 +7,7 @@
     <title>timer</title>
   </head>
 
-  <body onload="breakTimer({{timer.break_length}}, {{timer.reminder_frequency}}, {{timer.reminder_amount}})">
-
+  <body onload="breakTimer({{timer.break_length}}, {{timer.reminder_frequency}}, {{timer.reminder_amount}}, {{timer.halfway_int}}, {{timer.third_int}}, {{timer.quarter_int}})">
     <h1 class = "break"> break<span>pro</span> </h1>
     <div class="line-separator"></div>
     <br>
