Updated html titles, new favicon

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/stylesheets/login.css">
-    <title>login in </title>
+    <title>login</title>
   </head>
 
   <body>
