--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/stylesheets/ulogs.css">
-    <title>your log</title>
+    <title>your logs</title>
   </head>
 
   <body>
