--- a/templates/settings.html
+++ b/templates/settings.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/scripts/settings_jquery.js"></script>
 
-    <title>User Settings</title>
+    <title>your settings</title>
 
   </head>
 
